--- a/build.gradle
+++ b/build.gradle
@@ -10,13 +10,11 @@ repositories {
 }
 
 dependencies {
-    implementation 'io.appium:java-client:7.6.0'
-
-    implementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
-
+    implementation 'io.appium:java-client:8.6.0'
+    implementation 'org.seleniumhq.selenium:selenium-java:4.13.0'
     testImplementation 'junit:junit:4.13.2'
-
-    implementation 'org.slf4j:slf4j-simple:1.7.36'
+    implementation 'org.slf4j:slf4j-api:2.0.9'      // Новая версия
+    implementation 'org.slf4j:slf4j-simple:2.0.9'   // Новая версия
 }
 
 
@@ -24,4 +22,5 @@ test {
     useJUnit()
     systemProperty 'user.language', 'ru'
     systemProperty 'user.country', 'RU'
+    systemProperty 'file.encoding', 'UTF-8'
 }
